--- a/_includes/about-articles.html
+++ b/_includes/about-articles.html
@@ -8,7 +8,7 @@
 <br>
 <p>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and developer; work at <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://debashisbarman.tumblr.com">blogger</a>.</p>
 
-<p>( Download ) <a href="http://www.debashisbarman.in/assets/DebashisBarmanCurriculumVitae.pdf">Curriculum Vitae</a></p>
+<p class="fadeInBlock">( Download ) <a href="http://www.debashisbarman.in/assets/DebashisBarmanCurriculumVitae.pdf">Curriculum Vitae</a></p>
 </div>
 </div>
 <div class="divider"></div>
