--- a/_includes/about-articles.html
+++ b/_includes/about-articles.html
@@ -3,12 +3,12 @@
 <div class="about-article-inner">
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-12 col-md-12 col-sm-12 clearfix">
+<div class="col-lg-12 col-md-12 col-sm-12 clearfix fadeInBlock">
 <h3>Introduction</h3>
 <br>
 <p>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and developer; work at <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://debashisbarman.tumblr.com">blogger</a>.</p>
 
-<p class="fadeInBlock">( Download ) <a href="http://www.debashisbarman.in/assets/DebashisBarmanCurriculumVitae.pdf">Curriculum Vitae</a></p>
+<p>( Download ) <a href="http://www.debashisbarman.in/assets/DebashisBarmanCurriculumVitae.pdf">Curriculum Vitae</a></p>
 </div>
 </div>
 <div class="divider"></div>
