--- a/_includes/about-articles.html
+++ b/_includes/about-articles.html
@@ -3,7 +3,7 @@
 <div class="about-article-inner">
 <div class="container clearfix">
 <div class="row clearfix">
-<div class="col-lg-12 col-md-12 col-sm-12 clearfix about-1">
+<div class="col-lg-12 col-md-12 col-sm-12 clearfix">
 <h3>Introduction</h3>
 <br>
 <p>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and developer; work at <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://debashisbarman.tumblr.com">blogger</a>.</p>
@@ -13,7 +13,7 @@
 </div>
 <div class="divider"></div>
 <div class="row clearfix">
-<div class="col-lg-10 col-md-12 col-sm-12 clearfix about-2">
+<div class="col-lg-10 col-md-12 col-sm-12 clearfix">
 <h3>Some articles</h3>
 <br>
 <p>
