--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,9 +4,9 @@
 <div class="container clearfix">
 <div class="row clearfix">
 <div class="col-lg-10 col-md-12 col-sm-12 clearfix">
-<h2>Want to talk with me ? Drop a <a href="mailto:deb.dbuniversity@gmail.com"><strong>mail.</strong></a></h2>
+<h2>Want to talk with me ? Drop a <a href="mailto:deb.dbuniversity@gmail.com">mail.</a></h2>
 <br>
-<p>Feel free to hit me up on <a target="_blank" href="https://twitter.com/iDebashisBarman">Twitter</a>, <a target="_blank" href="https://github.com/debashisbarman">Github</a>, <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="https://medium.com/@iDeb">Medium</a>, <a target="_blank" href="http://cssdeck.com/user/debashisb04">CSSDeck</a> or anywhere else you can find me.</p>
+<p>Feel free to hit me up on <a target="_blank" href="https://twitter.com/iDebashisBarman">Twitter</a>, <a target="_blank" href="https://github.com/debashisbarman">Github</a>, <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="https://medium.com/@iDeb">Medium</a>, <a target="_blank" href="http://cssdeck.com/user/debashisb04">CSSDeck</a> or anywhere <a target="_blank" href="https://www.google.co.in/?q=Debashis+Barman+Web+Designer+Developer">else</a> you can find me.</p>
 </div>
 </div>
 </div>
