--- a/css/main.css
+++ b/css/main.css
@@ -87,12 +87,12 @@ footer p a, footer p a:visited, footer p a:hover, footer p a:focus { color #f3f5
 
 .article blockquote { border-left: none; font-family: "Georgia", sans; font-size: 16px; line-height: 1; margin: 0; padding: 0 0 34px 0; quotes: "\201C""\201D""\2018""2019"; }
 
-.article blockquote:before { color: #eaeaea; font-size: 34px; margin-right: 2%; font-style: italic; font-weight: bold; content: open-quote; }
+.article blockquote:before { color: #eaeaea; font-size: 34px; margin-left: -17px; font-style: italic; font-weight: bold; content: open-quote; }
 
 .article blockquote p { display: inline; font-size: 16px; font-style: italic; font-weight: bold; }
 
 @media (min-width: 768px) {
 p, li, li p { font-size: 21px; line-height: 2; }
 .article blockquote p { font-size: 25px; }
-.article blockquote:before { font-size: 50px; margin-top: -21px; }
+.article blockquote:before { font-size: 55px; margin-top: -21px; margin-left: -25px; }
 }
