--- a/_includes/about-articles.html
+++ b/_includes/about-articles.html
@@ -14,7 +14,7 @@
 <div class="divider"></div>
 <div class="row clearfix">
 <div class="col-lg-10 col-md-12 col-sm-12 clearfix">
-<h3>Some articles</h3>
+<h3>Selected articles</h3>
 <br>
 <p>
 {% for post in site.posts %}
