--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,7 @@ code, pre { background-color: #f3f5f6; border : none; border-radius: 0; }
 
 @media (max-width: 768) {
 pre { padding: 5%; }
-.divider { margin-left: 0; }
-}
-
-@media (min-width: 768) {
-.divider { margin: 5% auto; }
+.divider { margin: 5% 0; }
 }
 
 
