--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,10 @@
 ================================================== */
 body { color: #555; font-weight: normal; }
 
-.divider { clear: both; height: 2px; margin: 5% 0 5% -21px; width: 144px; background: #eaeaea; }
+.divider { clear: both; height: 2px; margin: 5% 0 5% -2%; width: 144px; background: #eaeaea; }
 
 footer { color: #f3f5f6; background-image: url(../assets/images/cover.jpg); background-position: bottom center; }
-.footer-inner { padding: 3% 0; margin: 0 21px 21px 21px; border: 3px solid #eaeaea; border-top: none; }
+.footer-inner { padding: 3% 0; margin: 0 2% 2% 2%; border: 3px solid #eaeaea; border-top: none; }
 
 code, pre { background-color: #f3f5f6; border : none; border-radius: 0; }
 
@@ -27,26 +27,26 @@ pre { padding: 5%; }
 ================================================== */
 .home header { color: #f3f5f6; text-transform: uppercase; background: transparent; background-position: center center; }
 
-.home .header-inner { padding: 89px 0; margin: 21px 21px 0 21px; border: 3px solid #eaeaea; border-bottom: none; }
+.home .header-inner { padding: 89px 0; margin: 2% 2% 0 2%; border: 3px solid #eaeaea; border-bottom: none; }
 
-.home .about-article-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
+.home .about-article-inner { padding: 5% 0; margin-left: 2%; margin-right: 2%; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
 
 .home .portfolio { background-color: #f3f5f6; }
-.home .portfolio-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
+.home .portfolio-inner { padding: 5% 0; margin-left: 2%; margin-right: 2%; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
 
-.home .contact-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
+.home .contact-inner { padding: 5% 0; margin-left: 2%; margin-right: 2%; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
 
 
 /* Article
 ================================================== */
 .article .article-inner { padding: 5% 0; }
 
-.article .article-inner { padding: 89px 0 5% 0; margin: 21px 21px 0 21px; border: 3px solid #eaeaea; border-bottom: none; }
+.article .article-inner { padding: 89px 0 5% 0; margin: 2% 2% 0 2%; border: 3px solid #eaeaea; border-bottom: none; }
 
 .article .share { background-color: #f3f5f6; }
-.article .share-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
+.article .share-inner { padding: 5% 0; margin-left: 2%; margin-right: 2%; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
 
-.article .contact-inner { padding: 5% 0; margin-left: 21px; margin-right: 21px; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
+.article .contact-inner { padding: 5% 0; margin-left: 2%; margin-right: 2%; border-left: 3px solid #eaeaea; border-right: 3px solid #eaeaea; }
 
 
 /* Typography
@@ -76,7 +76,7 @@ footer p a, footer p a:visited, footer p a:hover, footer p a:focus { color #f3f5
 .article blockquote p { display: inline; font-size: 16px; font-style: italic; font-weight: bold; }
 
 @media (min-width: 768px) {
-p, li, li p { font-size: 21px; line-height: 2; }
+p, li, li p { font-size: 2%; line-height: 2; }
 .article blockquote p { font-size: 25px; }
-.article blockquote:before { font-size: 55px; margin-top: -21px; margin-left: -25px; }
+.article blockquote:before { font-size: 55px; margin-top: -2%; margin-left: -25px; }
 }
