--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ footer p a, footer p a:visited, footer p a:hover, footer p a:focus { color #f3f5
 .article blockquote p { display: inline; font-size: 16px; font-style: italic; font-weight: bold; }
 
 @media (min-width: 768px) {
-p, li, li p { font-size: 2%; line-height: 2; }
+p, li, li p { font-size: 21px; line-height: 2; }
 .article blockquote p { font-size: 25px; }
 .article blockquote:before { font-size: 55px; margin-top: -2%; margin-left: -25px; }
 }
